<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.calendar.calendar.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/daysCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/workDaysCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/weekendDaysCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/fortyHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/thirtySixCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/twentyFourCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/quartal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/halfYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
